# whynot

./: .clang-format  .gitignore  CMakeLists.txt  README.md  TODO.md
assets/shaders/: triangle.frag  triangle.vert
src/: main.c  util.h
src/core/: core_types.h  file.inl  math.inl
src/render/: device.c  device.h  queue.c  queue.h  render.h  render_types.h  shader_compile.c  shader_compile.h  swapchain.h  util_vk.inl  vk.h
src/util/: deletion_queue.inl
